# simple-solana-program

./: run.sh
client/: .gitignore  Cargo.toml
client/src/: client.rs  main.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
