[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9"
clap = { version = "3.2", features = ["cargo", "env"] }
home = "0.5"
solana-client = { git = "https://github.com/dmakarov/solana.git", version = "1.12.0" }
solana-sdk = { git = "https://github.com/dmakarov/solana.git", version = "1.12.0" }
thiserror = "1"
yaml-rust = "0.4"
