[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
clap = { version = "3.2", features = ["cargo", "env"] }
home = "0.5"
solana-client = { git = "https://github.com/anza-xyz/agave.git", version = "2.1.0" }
solana-sdk = { git = "https://github.com/anza-xyz/agave.git", version = "2.1.0" }
thiserror = "1"
yaml-rust = "0.4"

[patch.crates-io]
solana-program = { git = "https://github.com/anza-xyz/agave.git", version = "2.1.0" }
solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave.git", version = "2.1.0" }
